// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`String.prototype.replaceAll detection with both criteria 1`] = `
{
  "unicorn/better-regex": "error",
  "unicorn/catch-error-name": "error",
  "unicorn/consistent-destructuring": "error",
  "unicorn/consistent-function-scoping": "error",
  "unicorn/custom-error-definition": "warn",
  "unicorn/empty-brace-spaces": "off",
  "unicorn/error-message": "error",
  "unicorn/escape-case": "error",
  "unicorn/expiring-todo-comments": "off",
  "unicorn/explicit-length-check": "error",
  "unicorn/filename-case": "off",
  "unicorn/import-index": "error",
  "unicorn/import-style": "off",
  "unicorn/new-for-builtins": "error",
  "unicorn/no-abusive-eslint-disable": "error",
  "unicorn/no-array-callback-reference": "off",
  "unicorn/no-array-for-each": "off",
  "unicorn/no-array-method-this-argument": "warn",
  "unicorn/no-array-push-push": "warn",
  "unicorn/no-array-reduce": "off",
  "unicorn/no-await-expression-member": "error",
  "unicorn/no-console-spaces": "error",
  "unicorn/no-document-cookie": "warn",
  "unicorn/no-empty-file": "off",
  "unicorn/no-for-loop": "off",
  "unicorn/no-hex-escape": "error",
  "unicorn/no-instanceof-array": "error",
  "unicorn/no-invalid-remove-event-listener": "error",
  "unicorn/no-keyword-prefix": "off",
  "unicorn/no-lonely-if": "warn",
  "unicorn/no-nested-ternary": "off",
  "unicorn/no-new-array": "error",
  "unicorn/no-new-buffer": "error",
  "unicorn/no-null": "off",
  "unicorn/no-object-as-default-parameter": "warn",
  "unicorn/no-process-exit": "error",
  "unicorn/no-static-only-class": "error",
  "unicorn/no-thenable": "warn",
  "unicorn/no-this-assignment": "warn",
  "unicorn/no-unreadable-array-destructuring": "warn",
  "unicorn/no-unreadable-iife": "warn",
  "unicorn/no-unsafe-regex": "error",
  "unicorn/no-unused-properties": "warn",
  "unicorn/no-useless-fallback-in-spread": "warn",
  "unicorn/no-useless-length-check": "error",
  "unicorn/no-useless-promise-resolve-reject": "warn",
  "unicorn/no-useless-spread": "error",
  "unicorn/no-useless-switch-case": "warn",
  "unicorn/no-useless-undefined": "error",
  "unicorn/no-zero-fractions": "error",
  "unicorn/number-literal-case": "off",
  "unicorn/numeric-separators-style": "warn",
  "unicorn/prefer-add-event-listener": "error",
  "unicorn/prefer-array-find": "error",
  "unicorn/prefer-array-flat": "warn",
  "unicorn/prefer-array-flat-map": "error",
  "unicorn/prefer-array-index-of": "warn",
  "unicorn/prefer-array-some": "warn",
  "unicorn/prefer-at": "off",
  "unicorn/prefer-code-point": "warn",
  "unicorn/prefer-date-now": "warn",
  "unicorn/prefer-default-parameters": "warn",
  "unicorn/prefer-dom-node-append": "error",
  "unicorn/prefer-dom-node-dataset": "error",
  "unicorn/prefer-dom-node-remove": "error",
  "unicorn/prefer-dom-node-text-content": "error",
  "unicorn/prefer-export-from": "warn",
  "unicorn/prefer-includes": "off",
  "unicorn/prefer-json-parse-buffer": "warn",
  "unicorn/prefer-keyboard-event-key": "error",
  "unicorn/prefer-math-trunc": "warn",
  "unicorn/prefer-modern-dom-apis": "error",
  "unicorn/prefer-modern-math-apis": "warn",
  "unicorn/prefer-module": "off",
  "unicorn/prefer-native-coercion-functions": "error",
  "unicorn/prefer-negative-index": "error",
  "unicorn/prefer-node-protocol": "off",
  "unicorn/prefer-number-properties": [
    "warn",
    {
      "checkInfinity": false,
    },
  ],
  "unicorn/prefer-object-from-entries": "error",
  "unicorn/prefer-optional-catch-binding": "error",
  "unicorn/prefer-prototype-methods": "warn",
  "unicorn/prefer-query-selector": "error",
  "unicorn/prefer-reflect-apply": "error",
  "unicorn/prefer-regexp-test": "error",
  "unicorn/prefer-set-has": "error",
  "unicorn/prefer-spread": "error",
  "unicorn/prefer-string-replace-all": "error",
  "unicorn/prefer-string-slice": "error",
  "unicorn/prefer-string-starts-ends-with": "off",
  "unicorn/prefer-string-trim-start-end": "error",
  "unicorn/prefer-switch": [
    "error",
    {
      "emptyDefaultCase": "no-default-comment",
    },
  ],
  "unicorn/prefer-ternary": "off",
  "unicorn/prefer-top-level-await": "off",
  "unicorn/prefer-type-error": "error",
  "unicorn/prevent-abbreviations": "off",
  "unicorn/relative-url-style": "warn",
  "unicorn/require-array-join-separator": "warn",
  "unicorn/require-number-to-fixed-digits-argument": "warn",
  "unicorn/require-post-message-target-origin": "error",
  "unicorn/string-content": "off",
  "unicorn/template-indent": "warn",
  "unicorn/text-encoding-identifier-case": "off",
  "unicorn/throw-new-error": "error",
}
`;

exports[`String.prototype.replaceAll detection with lib esnext 1`] = `
{
  "unicorn/better-regex": "error",
  "unicorn/catch-error-name": "error",
  "unicorn/consistent-destructuring": "error",
  "unicorn/consistent-function-scoping": "error",
  "unicorn/custom-error-definition": "warn",
  "unicorn/empty-brace-spaces": "off",
  "unicorn/error-message": "error",
  "unicorn/escape-case": "error",
  "unicorn/expiring-todo-comments": "off",
  "unicorn/explicit-length-check": "error",
  "unicorn/filename-case": "off",
  "unicorn/import-index": "error",
  "unicorn/import-style": "off",
  "unicorn/new-for-builtins": "error",
  "unicorn/no-abusive-eslint-disable": "error",
  "unicorn/no-array-callback-reference": "off",
  "unicorn/no-array-for-each": "off",
  "unicorn/no-array-method-this-argument": "warn",
  "unicorn/no-array-push-push": "warn",
  "unicorn/no-array-reduce": "off",
  "unicorn/no-await-expression-member": "error",
  "unicorn/no-console-spaces": "error",
  "unicorn/no-document-cookie": "warn",
  "unicorn/no-empty-file": "off",
  "unicorn/no-for-loop": "off",
  "unicorn/no-hex-escape": "error",
  "unicorn/no-instanceof-array": "error",
  "unicorn/no-invalid-remove-event-listener": "error",
  "unicorn/no-keyword-prefix": "warn",
  "unicorn/no-lonely-if": "warn",
  "unicorn/no-nested-ternary": "off",
  "unicorn/no-new-array": "error",
  "unicorn/no-new-buffer": "error",
  "unicorn/no-null": "off",
  "unicorn/no-object-as-default-parameter": "warn",
  "unicorn/no-process-exit": "error",
  "unicorn/no-static-only-class": "error",
  "unicorn/no-thenable": "warn",
  "unicorn/no-this-assignment": "warn",
  "unicorn/no-unreadable-array-destructuring": "warn",
  "unicorn/no-unreadable-iife": "warn",
  "unicorn/no-unsafe-regex": "error",
  "unicorn/no-unused-properties": "warn",
  "unicorn/no-useless-fallback-in-spread": "warn",
  "unicorn/no-useless-length-check": "error",
  "unicorn/no-useless-promise-resolve-reject": "warn",
  "unicorn/no-useless-spread": "error",
  "unicorn/no-useless-switch-case": "warn",
  "unicorn/no-useless-undefined": "error",
  "unicorn/no-zero-fractions": "error",
  "unicorn/number-literal-case": "off",
  "unicorn/numeric-separators-style": "warn",
  "unicorn/prefer-add-event-listener": "error",
  "unicorn/prefer-array-find": "error",
  "unicorn/prefer-array-flat": "warn",
  "unicorn/prefer-array-flat-map": "error",
  "unicorn/prefer-array-index-of": "warn",
  "unicorn/prefer-array-some": "warn",
  "unicorn/prefer-at": "off",
  "unicorn/prefer-code-point": "warn",
  "unicorn/prefer-date-now": "warn",
  "unicorn/prefer-default-parameters": "warn",
  "unicorn/prefer-dom-node-append": "error",
  "unicorn/prefer-dom-node-dataset": "error",
  "unicorn/prefer-dom-node-remove": "error",
  "unicorn/prefer-dom-node-text-content": "error",
  "unicorn/prefer-export-from": "warn",
  "unicorn/prefer-includes": "off",
  "unicorn/prefer-json-parse-buffer": "warn",
  "unicorn/prefer-keyboard-event-key": "error",
  "unicorn/prefer-math-trunc": "warn",
  "unicorn/prefer-modern-dom-apis": "error",
  "unicorn/prefer-modern-math-apis": "warn",
  "unicorn/prefer-module": "off",
  "unicorn/prefer-native-coercion-functions": "error",
  "unicorn/prefer-negative-index": "error",
  "unicorn/prefer-node-protocol": "off",
  "unicorn/prefer-number-properties": [
    "warn",
    {
      "checkInfinity": false,
    },
  ],
  "unicorn/prefer-object-from-entries": "error",
  "unicorn/prefer-optional-catch-binding": "error",
  "unicorn/prefer-prototype-methods": "warn",
  "unicorn/prefer-query-selector": "error",
  "unicorn/prefer-reflect-apply": "error",
  "unicorn/prefer-regexp-test": "error",
  "unicorn/prefer-set-has": "error",
  "unicorn/prefer-spread": "error",
  "unicorn/prefer-string-replace-all": "error",
  "unicorn/prefer-string-slice": "error",
  "unicorn/prefer-string-starts-ends-with": "off",
  "unicorn/prefer-string-trim-start-end": "error",
  "unicorn/prefer-switch": [
    "error",
    {
      "emptyDefaultCase": "no-default-comment",
    },
  ],
  "unicorn/prefer-ternary": "off",
  "unicorn/prefer-top-level-await": "off",
  "unicorn/prefer-type-error": "error",
  "unicorn/prevent-abbreviations": "off",
  "unicorn/relative-url-style": "warn",
  "unicorn/require-array-join-separator": "warn",
  "unicorn/require-number-to-fixed-digits-argument": "warn",
  "unicorn/require-post-message-target-origin": "error",
  "unicorn/string-content": "off",
  "unicorn/template-indent": "warn",
  "unicorn/text-encoding-identifier-case": "off",
  "unicorn/throw-new-error": "error",
}
`;

exports[`String.prototype.replaceAll detection with react 1`] = `
{
  "unicorn/better-regex": "error",
  "unicorn/catch-error-name": "error",
  "unicorn/consistent-destructuring": "error",
  "unicorn/consistent-function-scoping": "error",
  "unicorn/custom-error-definition": "warn",
  "unicorn/empty-brace-spaces": "off",
  "unicorn/error-message": "error",
  "unicorn/escape-case": "error",
  "unicorn/expiring-todo-comments": "off",
  "unicorn/explicit-length-check": "error",
  "unicorn/filename-case": "off",
  "unicorn/import-index": "error",
  "unicorn/import-style": "off",
  "unicorn/new-for-builtins": "error",
  "unicorn/no-abusive-eslint-disable": "error",
  "unicorn/no-array-callback-reference": "off",
  "unicorn/no-array-for-each": "off",
  "unicorn/no-array-method-this-argument": "warn",
  "unicorn/no-array-push-push": "warn",
  "unicorn/no-array-reduce": "off",
  "unicorn/no-await-expression-member": "error",
  "unicorn/no-console-spaces": "error",
  "unicorn/no-document-cookie": "warn",
  "unicorn/no-empty-file": "off",
  "unicorn/no-for-loop": "warn",
  "unicorn/no-hex-escape": "error",
  "unicorn/no-instanceof-array": "error",
  "unicorn/no-invalid-remove-event-listener": "error",
  "unicorn/no-keyword-prefix": "off",
  "unicorn/no-lonely-if": "warn",
  "unicorn/no-nested-ternary": "off",
  "unicorn/no-new-array": "error",
  "unicorn/no-new-buffer": "error",
  "unicorn/no-null": "off",
  "unicorn/no-object-as-default-parameter": "warn",
  "unicorn/no-process-exit": "error",
  "unicorn/no-static-only-class": "error",
  "unicorn/no-thenable": "warn",
  "unicorn/no-this-assignment": "warn",
  "unicorn/no-unreadable-array-destructuring": "warn",
  "unicorn/no-unreadable-iife": "warn",
  "unicorn/no-unsafe-regex": "error",
  "unicorn/no-unused-properties": "warn",
  "unicorn/no-useless-fallback-in-spread": "warn",
  "unicorn/no-useless-length-check": "error",
  "unicorn/no-useless-promise-resolve-reject": "warn",
  "unicorn/no-useless-spread": "error",
  "unicorn/no-useless-switch-case": "warn",
  "unicorn/no-useless-undefined": "error",
  "unicorn/no-zero-fractions": "error",
  "unicorn/number-literal-case": "off",
  "unicorn/numeric-separators-style": "warn",
  "unicorn/prefer-add-event-listener": "error",
  "unicorn/prefer-array-find": "error",
  "unicorn/prefer-array-flat": "warn",
  "unicorn/prefer-array-flat-map": "error",
  "unicorn/prefer-array-index-of": "warn",
  "unicorn/prefer-array-some": "warn",
  "unicorn/prefer-at": "off",
  "unicorn/prefer-code-point": "warn",
  "unicorn/prefer-date-now": "warn",
  "unicorn/prefer-default-parameters": "warn",
  "unicorn/prefer-dom-node-append": "error",
  "unicorn/prefer-dom-node-dataset": "error",
  "unicorn/prefer-dom-node-remove": "error",
  "unicorn/prefer-dom-node-text-content": "error",
  "unicorn/prefer-export-from": "warn",
  "unicorn/prefer-includes": "warn",
  "unicorn/prefer-json-parse-buffer": "warn",
  "unicorn/prefer-keyboard-event-key": "error",
  "unicorn/prefer-math-trunc": "warn",
  "unicorn/prefer-modern-dom-apis": "error",
  "unicorn/prefer-modern-math-apis": "warn",
  "unicorn/prefer-module": "off",
  "unicorn/prefer-native-coercion-functions": "error",
  "unicorn/prefer-negative-index": "error",
  "unicorn/prefer-node-protocol": "off",
  "unicorn/prefer-number-properties": [
    "warn",
    {
      "checkInfinity": false,
    },
  ],
  "unicorn/prefer-object-from-entries": "error",
  "unicorn/prefer-optional-catch-binding": "error",
  "unicorn/prefer-prototype-methods": "warn",
  "unicorn/prefer-query-selector": "error",
  "unicorn/prefer-reflect-apply": "error",
  "unicorn/prefer-regexp-test": "error",
  "unicorn/prefer-set-has": "error",
  "unicorn/prefer-spread": "error",
  "unicorn/prefer-string-replace-all": "error",
  "unicorn/prefer-string-slice": "error",
  "unicorn/prefer-string-starts-ends-with": "error",
  "unicorn/prefer-string-trim-start-end": "error",
  "unicorn/prefer-switch": [
    "error",
    {
      "emptyDefaultCase": "no-default-comment",
    },
  ],
  "unicorn/prefer-ternary": "off",
  "unicorn/prefer-top-level-await": "off",
  "unicorn/prefer-type-error": "error",
  "unicorn/prevent-abbreviations": "off",
  "unicorn/relative-url-style": "warn",
  "unicorn/require-array-join-separator": "warn",
  "unicorn/require-number-to-fixed-digits-argument": "warn",
  "unicorn/require-post-message-target-origin": "error",
  "unicorn/string-content": "off",
  "unicorn/template-indent": "warn",
  "unicorn/text-encoding-identifier-case": "warn",
  "unicorn/throw-new-error": "error",
}
`;

exports[`topLevelAwait detection with both criteria 1`] = `
{
  "unicorn/better-regex": "error",
  "unicorn/catch-error-name": "error",
  "unicorn/consistent-destructuring": "error",
  "unicorn/consistent-function-scoping": "error",
  "unicorn/custom-error-definition": "warn",
  "unicorn/empty-brace-spaces": "off",
  "unicorn/error-message": "error",
  "unicorn/escape-case": "error",
  "unicorn/expiring-todo-comments": "off",
  "unicorn/explicit-length-check": "error",
  "unicorn/filename-case": "off",
  "unicorn/import-index": "error",
  "unicorn/import-style": "off",
  "unicorn/new-for-builtins": "error",
  "unicorn/no-abusive-eslint-disable": "error",
  "unicorn/no-array-callback-reference": "off",
  "unicorn/no-array-for-each": "off",
  "unicorn/no-array-method-this-argument": "warn",
  "unicorn/no-array-push-push": "warn",
  "unicorn/no-array-reduce": "off",
  "unicorn/no-await-expression-member": "error",
  "unicorn/no-console-spaces": "error",
  "unicorn/no-document-cookie": "warn",
  "unicorn/no-empty-file": "off",
  "unicorn/no-for-loop": "off",
  "unicorn/no-hex-escape": "error",
  "unicorn/no-instanceof-array": "error",
  "unicorn/no-invalid-remove-event-listener": "error",
  "unicorn/no-keyword-prefix": "warn",
  "unicorn/no-lonely-if": "warn",
  "unicorn/no-nested-ternary": "off",
  "unicorn/no-new-array": "error",
  "unicorn/no-new-buffer": "error",
  "unicorn/no-null": "off",
  "unicorn/no-object-as-default-parameter": "warn",
  "unicorn/no-process-exit": "error",
  "unicorn/no-static-only-class": "error",
  "unicorn/no-thenable": "warn",
  "unicorn/no-this-assignment": "warn",
  "unicorn/no-unreadable-array-destructuring": "warn",
  "unicorn/no-unreadable-iife": "warn",
  "unicorn/no-unsafe-regex": "error",
  "unicorn/no-unused-properties": "warn",
  "unicorn/no-useless-fallback-in-spread": "warn",
  "unicorn/no-useless-length-check": "error",
  "unicorn/no-useless-promise-resolve-reject": "warn",
  "unicorn/no-useless-spread": "error",
  "unicorn/no-useless-switch-case": "warn",
  "unicorn/no-useless-undefined": "error",
  "unicorn/no-zero-fractions": "error",
  "unicorn/number-literal-case": "off",
  "unicorn/numeric-separators-style": "warn",
  "unicorn/prefer-add-event-listener": "error",
  "unicorn/prefer-array-find": "error",
  "unicorn/prefer-array-flat": "warn",
  "unicorn/prefer-array-flat-map": "error",
  "unicorn/prefer-array-index-of": "warn",
  "unicorn/prefer-array-some": "warn",
  "unicorn/prefer-at": "off",
  "unicorn/prefer-code-point": "warn",
  "unicorn/prefer-date-now": "warn",
  "unicorn/prefer-default-parameters": "warn",
  "unicorn/prefer-dom-node-append": "error",
  "unicorn/prefer-dom-node-dataset": "error",
  "unicorn/prefer-dom-node-remove": "error",
  "unicorn/prefer-dom-node-text-content": "error",
  "unicorn/prefer-export-from": "warn",
  "unicorn/prefer-includes": "off",
  "unicorn/prefer-json-parse-buffer": "warn",
  "unicorn/prefer-keyboard-event-key": "error",
  "unicorn/prefer-math-trunc": "warn",
  "unicorn/prefer-modern-dom-apis": "error",
  "unicorn/prefer-modern-math-apis": "warn",
  "unicorn/prefer-module": "off",
  "unicorn/prefer-native-coercion-functions": "error",
  "unicorn/prefer-negative-index": "error",
  "unicorn/prefer-node-protocol": "off",
  "unicorn/prefer-number-properties": [
    "warn",
    {
      "checkInfinity": false,
    },
  ],
  "unicorn/prefer-object-from-entries": "error",
  "unicorn/prefer-optional-catch-binding": "error",
  "unicorn/prefer-prototype-methods": "warn",
  "unicorn/prefer-query-selector": "error",
  "unicorn/prefer-reflect-apply": "error",
  "unicorn/prefer-regexp-test": "error",
  "unicorn/prefer-set-has": "error",
  "unicorn/prefer-spread": "error",
  "unicorn/prefer-string-replace-all": "off",
  "unicorn/prefer-string-slice": "error",
  "unicorn/prefer-string-starts-ends-with": "off",
  "unicorn/prefer-string-trim-start-end": "error",
  "unicorn/prefer-switch": [
    "error",
    {
      "emptyDefaultCase": "no-default-comment",
    },
  ],
  "unicorn/prefer-ternary": "off",
  "unicorn/prefer-top-level-await": "error",
  "unicorn/prefer-type-error": "error",
  "unicorn/prevent-abbreviations": "off",
  "unicorn/relative-url-style": "warn",
  "unicorn/require-array-join-separator": "warn",
  "unicorn/require-number-to-fixed-digits-argument": "warn",
  "unicorn/require-post-message-target-origin": "error",
  "unicorn/string-content": "off",
  "unicorn/template-indent": "warn",
  "unicorn/text-encoding-identifier-case": "off",
  "unicorn/throw-new-error": "error",
}
`;

exports[`topLevelAwait detection with entirely invalid target 1`] = `
{
  "unicorn/better-regex": "error",
  "unicorn/catch-error-name": "error",
  "unicorn/consistent-destructuring": "error",
  "unicorn/consistent-function-scoping": "error",
  "unicorn/custom-error-definition": "warn",
  "unicorn/empty-brace-spaces": "off",
  "unicorn/error-message": "error",
  "unicorn/escape-case": "error",
  "unicorn/expiring-todo-comments": "off",
  "unicorn/explicit-length-check": "error",
  "unicorn/filename-case": "off",
  "unicorn/import-index": "error",
  "unicorn/import-style": "off",
  "unicorn/new-for-builtins": "error",
  "unicorn/no-abusive-eslint-disable": "error",
  "unicorn/no-array-callback-reference": "off",
  "unicorn/no-array-for-each": "off",
  "unicorn/no-array-method-this-argument": "warn",
  "unicorn/no-array-push-push": "warn",
  "unicorn/no-array-reduce": "off",
  "unicorn/no-await-expression-member": "error",
  "unicorn/no-console-spaces": "error",
  "unicorn/no-document-cookie": "warn",
  "unicorn/no-empty-file": "off",
  "unicorn/no-for-loop": "off",
  "unicorn/no-hex-escape": "error",
  "unicorn/no-instanceof-array": "error",
  "unicorn/no-invalid-remove-event-listener": "error",
  "unicorn/no-keyword-prefix": "warn",
  "unicorn/no-lonely-if": "warn",
  "unicorn/no-nested-ternary": "off",
  "unicorn/no-new-array": "error",
  "unicorn/no-new-buffer": "error",
  "unicorn/no-null": "off",
  "unicorn/no-object-as-default-parameter": "warn",
  "unicorn/no-process-exit": "error",
  "unicorn/no-static-only-class": "error",
  "unicorn/no-thenable": "warn",
  "unicorn/no-this-assignment": "warn",
  "unicorn/no-unreadable-array-destructuring": "warn",
  "unicorn/no-unreadable-iife": "warn",
  "unicorn/no-unsafe-regex": "error",
  "unicorn/no-unused-properties": "warn",
  "unicorn/no-useless-fallback-in-spread": "warn",
  "unicorn/no-useless-length-check": "error",
  "unicorn/no-useless-promise-resolve-reject": "warn",
  "unicorn/no-useless-spread": "error",
  "unicorn/no-useless-switch-case": "warn",
  "unicorn/no-useless-undefined": "error",
  "unicorn/no-zero-fractions": "error",
  "unicorn/number-literal-case": "off",
  "unicorn/numeric-separators-style": "warn",
  "unicorn/prefer-add-event-listener": "error",
  "unicorn/prefer-array-find": "error",
  "unicorn/prefer-array-flat": "warn",
  "unicorn/prefer-array-flat-map": "error",
  "unicorn/prefer-array-index-of": "warn",
  "unicorn/prefer-array-some": "warn",
  "unicorn/prefer-at": "off",
  "unicorn/prefer-code-point": "warn",
  "unicorn/prefer-date-now": "warn",
  "unicorn/prefer-default-parameters": "warn",
  "unicorn/prefer-dom-node-append": "error",
  "unicorn/prefer-dom-node-dataset": "error",
  "unicorn/prefer-dom-node-remove": "error",
  "unicorn/prefer-dom-node-text-content": "error",
  "unicorn/prefer-export-from": "warn",
  "unicorn/prefer-includes": "off",
  "unicorn/prefer-json-parse-buffer": "warn",
  "unicorn/prefer-keyboard-event-key": "error",
  "unicorn/prefer-math-trunc": "warn",
  "unicorn/prefer-modern-dom-apis": "error",
  "unicorn/prefer-modern-math-apis": "warn",
  "unicorn/prefer-module": "off",
  "unicorn/prefer-native-coercion-functions": "error",
  "unicorn/prefer-negative-index": "error",
  "unicorn/prefer-node-protocol": "off",
  "unicorn/prefer-number-properties": [
    "warn",
    {
      "checkInfinity": false,
    },
  ],
  "unicorn/prefer-object-from-entries": "error",
  "unicorn/prefer-optional-catch-binding": "error",
  "unicorn/prefer-prototype-methods": "warn",
  "unicorn/prefer-query-selector": "error",
  "unicorn/prefer-reflect-apply": "error",
  "unicorn/prefer-regexp-test": "error",
  "unicorn/prefer-set-has": "error",
  "unicorn/prefer-spread": "error",
  "unicorn/prefer-string-replace-all": "off",
  "unicorn/prefer-string-slice": "error",
  "unicorn/prefer-string-starts-ends-with": "off",
  "unicorn/prefer-string-trim-start-end": "error",
  "unicorn/prefer-switch": [
    "error",
    {
      "emptyDefaultCase": "no-default-comment",
    },
  ],
  "unicorn/prefer-ternary": "off",
  "unicorn/prefer-top-level-await": "off",
  "unicorn/prefer-type-error": "error",
  "unicorn/prevent-abbreviations": "off",
  "unicorn/relative-url-style": "warn",
  "unicorn/require-array-join-separator": "warn",
  "unicorn/require-number-to-fixed-digits-argument": "warn",
  "unicorn/require-post-message-target-origin": "error",
  "unicorn/string-content": "off",
  "unicorn/template-indent": "warn",
  "unicorn/text-encoding-identifier-case": "off",
  "unicorn/throw-new-error": "error",
}
`;

exports[`topLevelAwait detection with invalid ScriptTarget 1`] = `
{
  "unicorn/better-regex": "error",
  "unicorn/catch-error-name": "error",
  "unicorn/consistent-destructuring": "error",
  "unicorn/consistent-function-scoping": "error",
  "unicorn/custom-error-definition": "warn",
  "unicorn/empty-brace-spaces": "off",
  "unicorn/error-message": "error",
  "unicorn/escape-case": "error",
  "unicorn/expiring-todo-comments": "off",
  "unicorn/explicit-length-check": "error",
  "unicorn/filename-case": "off",
  "unicorn/import-index": "error",
  "unicorn/import-style": "off",
  "unicorn/new-for-builtins": "error",
  "unicorn/no-abusive-eslint-disable": "error",
  "unicorn/no-array-callback-reference": "off",
  "unicorn/no-array-for-each": "off",
  "unicorn/no-array-method-this-argument": "warn",
  "unicorn/no-array-push-push": "warn",
  "unicorn/no-array-reduce": "off",
  "unicorn/no-await-expression-member": "error",
  "unicorn/no-console-spaces": "error",
  "unicorn/no-document-cookie": "warn",
  "unicorn/no-empty-file": "off",
  "unicorn/no-for-loop": "off",
  "unicorn/no-hex-escape": "error",
  "unicorn/no-instanceof-array": "error",
  "unicorn/no-invalid-remove-event-listener": "error",
  "unicorn/no-keyword-prefix": "warn",
  "unicorn/no-lonely-if": "warn",
  "unicorn/no-nested-ternary": "off",
  "unicorn/no-new-array": "error",
  "unicorn/no-new-buffer": "error",
  "unicorn/no-null": "off",
  "unicorn/no-object-as-default-parameter": "warn",
  "unicorn/no-process-exit": "error",
  "unicorn/no-static-only-class": "error",
  "unicorn/no-thenable": "warn",
  "unicorn/no-this-assignment": "warn",
  "unicorn/no-unreadable-array-destructuring": "warn",
  "unicorn/no-unreadable-iife": "warn",
  "unicorn/no-unsafe-regex": "error",
  "unicorn/no-unused-properties": "warn",
  "unicorn/no-useless-fallback-in-spread": "warn",
  "unicorn/no-useless-length-check": "error",
  "unicorn/no-useless-promise-resolve-reject": "warn",
  "unicorn/no-useless-spread": "error",
  "unicorn/no-useless-switch-case": "warn",
  "unicorn/no-useless-undefined": "error",
  "unicorn/no-zero-fractions": "error",
  "unicorn/number-literal-case": "off",
  "unicorn/numeric-separators-style": "warn",
  "unicorn/prefer-add-event-listener": "error",
  "unicorn/prefer-array-find": "error",
  "unicorn/prefer-array-flat": "warn",
  "unicorn/prefer-array-flat-map": "error",
  "unicorn/prefer-array-index-of": "warn",
  "unicorn/prefer-array-some": "warn",
  "unicorn/prefer-at": "off",
  "unicorn/prefer-code-point": "warn",
  "unicorn/prefer-date-now": "warn",
  "unicorn/prefer-default-parameters": "warn",
  "unicorn/prefer-dom-node-append": "error",
  "unicorn/prefer-dom-node-dataset": "error",
  "unicorn/prefer-dom-node-remove": "error",
  "unicorn/prefer-dom-node-text-content": "error",
  "unicorn/prefer-export-from": "warn",
  "unicorn/prefer-includes": "off",
  "unicorn/prefer-json-parse-buffer": "warn",
  "unicorn/prefer-keyboard-event-key": "error",
  "unicorn/prefer-math-trunc": "warn",
  "unicorn/prefer-modern-dom-apis": "error",
  "unicorn/prefer-modern-math-apis": "warn",
  "unicorn/prefer-module": "off",
  "unicorn/prefer-native-coercion-functions": "error",
  "unicorn/prefer-negative-index": "error",
  "unicorn/prefer-node-protocol": "off",
  "unicorn/prefer-number-properties": [
    "warn",
    {
      "checkInfinity": false,
    },
  ],
  "unicorn/prefer-object-from-entries": "error",
  "unicorn/prefer-optional-catch-binding": "error",
  "unicorn/prefer-prototype-methods": "warn",
  "unicorn/prefer-query-selector": "error",
  "unicorn/prefer-reflect-apply": "error",
  "unicorn/prefer-regexp-test": "error",
  "unicorn/prefer-set-has": "error",
  "unicorn/prefer-spread": "error",
  "unicorn/prefer-string-replace-all": "off",
  "unicorn/prefer-string-slice": "error",
  "unicorn/prefer-string-starts-ends-with": "off",
  "unicorn/prefer-string-trim-start-end": "error",
  "unicorn/prefer-switch": [
    "error",
    {
      "emptyDefaultCase": "no-default-comment",
    },
  ],
  "unicorn/prefer-ternary": "off",
  "unicorn/prefer-top-level-await": "off",
  "unicorn/prefer-type-error": "error",
  "unicorn/prevent-abbreviations": "off",
  "unicorn/relative-url-style": "warn",
  "unicorn/require-array-join-separator": "warn",
  "unicorn/require-number-to-fixed-digits-argument": "warn",
  "unicorn/require-post-message-target-origin": "error",
  "unicorn/string-content": "off",
  "unicorn/template-indent": "warn",
  "unicorn/text-encoding-identifier-case": "off",
  "unicorn/throw-new-error": "error",
}
`;

exports[`topLevelAwait detection with invalid module 1`] = `
{
  "unicorn/better-regex": "error",
  "unicorn/catch-error-name": "error",
  "unicorn/consistent-destructuring": "error",
  "unicorn/consistent-function-scoping": "error",
  "unicorn/custom-error-definition": "warn",
  "unicorn/empty-brace-spaces": "off",
  "unicorn/error-message": "error",
  "unicorn/escape-case": "error",
  "unicorn/expiring-todo-comments": "off",
  "unicorn/explicit-length-check": "error",
  "unicorn/filename-case": "off",
  "unicorn/import-index": "error",
  "unicorn/import-style": "off",
  "unicorn/new-for-builtins": "error",
  "unicorn/no-abusive-eslint-disable": "error",
  "unicorn/no-array-callback-reference": "off",
  "unicorn/no-array-for-each": "off",
  "unicorn/no-array-method-this-argument": "warn",
  "unicorn/no-array-push-push": "warn",
  "unicorn/no-array-reduce": "off",
  "unicorn/no-await-expression-member": "error",
  "unicorn/no-console-spaces": "error",
  "unicorn/no-document-cookie": "warn",
  "unicorn/no-empty-file": "off",
  "unicorn/no-for-loop": "off",
  "unicorn/no-hex-escape": "error",
  "unicorn/no-instanceof-array": "error",
  "unicorn/no-invalid-remove-event-listener": "error",
  "unicorn/no-keyword-prefix": "warn",
  "unicorn/no-lonely-if": "warn",
  "unicorn/no-nested-ternary": "off",
  "unicorn/no-new-array": "error",
  "unicorn/no-new-buffer": "error",
  "unicorn/no-null": "off",
  "unicorn/no-object-as-default-parameter": "warn",
  "unicorn/no-process-exit": "error",
  "unicorn/no-static-only-class": "error",
  "unicorn/no-thenable": "warn",
  "unicorn/no-this-assignment": "warn",
  "unicorn/no-unreadable-array-destructuring": "warn",
  "unicorn/no-unreadable-iife": "warn",
  "unicorn/no-unsafe-regex": "error",
  "unicorn/no-unused-properties": "warn",
  "unicorn/no-useless-fallback-in-spread": "warn",
  "unicorn/no-useless-length-check": "error",
  "unicorn/no-useless-promise-resolve-reject": "warn",
  "unicorn/no-useless-spread": "error",
  "unicorn/no-useless-switch-case": "warn",
  "unicorn/no-useless-undefined": "error",
  "unicorn/no-zero-fractions": "error",
  "unicorn/number-literal-case": "off",
  "unicorn/numeric-separators-style": "warn",
  "unicorn/prefer-add-event-listener": "error",
  "unicorn/prefer-array-find": "error",
  "unicorn/prefer-array-flat": "warn",
  "unicorn/prefer-array-flat-map": "error",
  "unicorn/prefer-array-index-of": "warn",
  "unicorn/prefer-array-some": "warn",
  "unicorn/prefer-at": "off",
  "unicorn/prefer-code-point": "warn",
  "unicorn/prefer-date-now": "warn",
  "unicorn/prefer-default-parameters": "warn",
  "unicorn/prefer-dom-node-append": "error",
  "unicorn/prefer-dom-node-dataset": "error",
  "unicorn/prefer-dom-node-remove": "error",
  "unicorn/prefer-dom-node-text-content": "error",
  "unicorn/prefer-export-from": "warn",
  "unicorn/prefer-includes": "off",
  "unicorn/prefer-json-parse-buffer": "warn",
  "unicorn/prefer-keyboard-event-key": "error",
  "unicorn/prefer-math-trunc": "warn",
  "unicorn/prefer-modern-dom-apis": "error",
  "unicorn/prefer-modern-math-apis": "warn",
  "unicorn/prefer-module": "off",
  "unicorn/prefer-native-coercion-functions": "error",
  "unicorn/prefer-negative-index": "error",
  "unicorn/prefer-node-protocol": "off",
  "unicorn/prefer-number-properties": [
    "warn",
    {
      "checkInfinity": false,
    },
  ],
  "unicorn/prefer-object-from-entries": "error",
  "unicorn/prefer-optional-catch-binding": "error",
  "unicorn/prefer-prototype-methods": "warn",
  "unicorn/prefer-query-selector": "error",
  "unicorn/prefer-reflect-apply": "error",
  "unicorn/prefer-regexp-test": "error",
  "unicorn/prefer-set-has": "error",
  "unicorn/prefer-spread": "error",
  "unicorn/prefer-string-replace-all": "off",
  "unicorn/prefer-string-slice": "error",
  "unicorn/prefer-string-starts-ends-with": "off",
  "unicorn/prefer-string-trim-start-end": "error",
  "unicorn/prefer-switch": [
    "error",
    {
      "emptyDefaultCase": "no-default-comment",
    },
  ],
  "unicorn/prefer-ternary": "off",
  "unicorn/prefer-top-level-await": "off",
  "unicorn/prefer-type-error": "error",
  "unicorn/prevent-abbreviations": "off",
  "unicorn/relative-url-style": "warn",
  "unicorn/require-array-join-separator": "warn",
  "unicorn/require-number-to-fixed-digits-argument": "warn",
  "unicorn/require-post-message-target-origin": "error",
  "unicorn/string-content": "off",
  "unicorn/template-indent": "warn",
  "unicorn/text-encoding-identifier-case": "off",
  "unicorn/throw-new-error": "error",
}
`;

exports[`topLevelAwait detection with invalid string target 1`] = `
{
  "unicorn/better-regex": "error",
  "unicorn/catch-error-name": "error",
  "unicorn/consistent-destructuring": "error",
  "unicorn/consistent-function-scoping": "error",
  "unicorn/custom-error-definition": "warn",
  "unicorn/empty-brace-spaces": "off",
  "unicorn/error-message": "error",
  "unicorn/escape-case": "error",
  "unicorn/expiring-todo-comments": "off",
  "unicorn/explicit-length-check": "error",
  "unicorn/filename-case": "off",
  "unicorn/import-index": "error",
  "unicorn/import-style": "off",
  "unicorn/new-for-builtins": "error",
  "unicorn/no-abusive-eslint-disable": "error",
  "unicorn/no-array-callback-reference": "off",
  "unicorn/no-array-for-each": "off",
  "unicorn/no-array-method-this-argument": "warn",
  "unicorn/no-array-push-push": "warn",
  "unicorn/no-array-reduce": "off",
  "unicorn/no-await-expression-member": "error",
  "unicorn/no-console-spaces": "error",
  "unicorn/no-document-cookie": "warn",
  "unicorn/no-empty-file": "off",
  "unicorn/no-for-loop": "off",
  "unicorn/no-hex-escape": "error",
  "unicorn/no-instanceof-array": "error",
  "unicorn/no-invalid-remove-event-listener": "error",
  "unicorn/no-keyword-prefix": "warn",
  "unicorn/no-lonely-if": "warn",
  "unicorn/no-nested-ternary": "off",
  "unicorn/no-new-array": "error",
  "unicorn/no-new-buffer": "error",
  "unicorn/no-null": "off",
  "unicorn/no-object-as-default-parameter": "warn",
  "unicorn/no-process-exit": "error",
  "unicorn/no-static-only-class": "error",
  "unicorn/no-thenable": "warn",
  "unicorn/no-this-assignment": "warn",
  "unicorn/no-unreadable-array-destructuring": "warn",
  "unicorn/no-unreadable-iife": "warn",
  "unicorn/no-unsafe-regex": "error",
  "unicorn/no-unused-properties": "warn",
  "unicorn/no-useless-fallback-in-spread": "warn",
  "unicorn/no-useless-length-check": "error",
  "unicorn/no-useless-promise-resolve-reject": "warn",
  "unicorn/no-useless-spread": "error",
  "unicorn/no-useless-switch-case": "warn",
  "unicorn/no-useless-undefined": "error",
  "unicorn/no-zero-fractions": "error",
  "unicorn/number-literal-case": "off",
  "unicorn/numeric-separators-style": "warn",
  "unicorn/prefer-add-event-listener": "error",
  "unicorn/prefer-array-find": "error",
  "unicorn/prefer-array-flat": "warn",
  "unicorn/prefer-array-flat-map": "error",
  "unicorn/prefer-array-index-of": "warn",
  "unicorn/prefer-array-some": "warn",
  "unicorn/prefer-at": "off",
  "unicorn/prefer-code-point": "warn",
  "unicorn/prefer-date-now": "warn",
  "unicorn/prefer-default-parameters": "warn",
  "unicorn/prefer-dom-node-append": "error",
  "unicorn/prefer-dom-node-dataset": "error",
  "unicorn/prefer-dom-node-remove": "error",
  "unicorn/prefer-dom-node-text-content": "error",
  "unicorn/prefer-export-from": "warn",
  "unicorn/prefer-includes": "off",
  "unicorn/prefer-json-parse-buffer": "warn",
  "unicorn/prefer-keyboard-event-key": "error",
  "unicorn/prefer-math-trunc": "warn",
  "unicorn/prefer-modern-dom-apis": "error",
  "unicorn/prefer-modern-math-apis": "warn",
  "unicorn/prefer-module": "off",
  "unicorn/prefer-native-coercion-functions": "error",
  "unicorn/prefer-negative-index": "error",
  "unicorn/prefer-node-protocol": "off",
  "unicorn/prefer-number-properties": [
    "warn",
    {
      "checkInfinity": false,
    },
  ],
  "unicorn/prefer-object-from-entries": "error",
  "unicorn/prefer-optional-catch-binding": "error",
  "unicorn/prefer-prototype-methods": "warn",
  "unicorn/prefer-query-selector": "error",
  "unicorn/prefer-reflect-apply": "error",
  "unicorn/prefer-regexp-test": "error",
  "unicorn/prefer-set-has": "error",
  "unicorn/prefer-spread": "error",
  "unicorn/prefer-string-replace-all": "off",
  "unicorn/prefer-string-slice": "error",
  "unicorn/prefer-string-starts-ends-with": "off",
  "unicorn/prefer-string-trim-start-end": "error",
  "unicorn/prefer-switch": [
    "error",
    {
      "emptyDefaultCase": "no-default-comment",
    },
  ],
  "unicorn/prefer-ternary": "off",
  "unicorn/prefer-top-level-await": "off",
  "unicorn/prefer-type-error": "error",
  "unicorn/prevent-abbreviations": "off",
  "unicorn/relative-url-style": "warn",
  "unicorn/require-array-join-separator": "warn",
  "unicorn/require-number-to-fixed-digits-argument": "warn",
  "unicorn/require-post-message-target-origin": "error",
  "unicorn/string-content": "off",
  "unicorn/template-indent": "warn",
  "unicorn/text-encoding-identifier-case": "off",
  "unicorn/throw-new-error": "error",
}
`;

exports[`topLevelAwait detection with invalid target 1`] = `
{
  "unicorn/better-regex": "error",
  "unicorn/catch-error-name": "error",
  "unicorn/consistent-destructuring": "error",
  "unicorn/consistent-function-scoping": "error",
  "unicorn/custom-error-definition": "warn",
  "unicorn/empty-brace-spaces": "off",
  "unicorn/error-message": "error",
  "unicorn/escape-case": "error",
  "unicorn/expiring-todo-comments": "off",
  "unicorn/explicit-length-check": "error",
  "unicorn/filename-case": "off",
  "unicorn/import-index": "error",
  "unicorn/import-style": "off",
  "unicorn/new-for-builtins": "error",
  "unicorn/no-abusive-eslint-disable": "error",
  "unicorn/no-array-callback-reference": "off",
  "unicorn/no-array-for-each": "off",
  "unicorn/no-array-method-this-argument": "warn",
  "unicorn/no-array-push-push": "warn",
  "unicorn/no-array-reduce": "off",
  "unicorn/no-await-expression-member": "error",
  "unicorn/no-console-spaces": "error",
  "unicorn/no-document-cookie": "warn",
  "unicorn/no-empty-file": "off",
  "unicorn/no-for-loop": "off",
  "unicorn/no-hex-escape": "error",
  "unicorn/no-instanceof-array": "error",
  "unicorn/no-invalid-remove-event-listener": "error",
  "unicorn/no-keyword-prefix": "warn",
  "unicorn/no-lonely-if": "warn",
  "unicorn/no-nested-ternary": "off",
  "unicorn/no-new-array": "error",
  "unicorn/no-new-buffer": "error",
  "unicorn/no-null": "off",
  "unicorn/no-object-as-default-parameter": "warn",
  "unicorn/no-process-exit": "error",
  "unicorn/no-static-only-class": "error",
  "unicorn/no-thenable": "warn",
  "unicorn/no-this-assignment": "warn",
  "unicorn/no-unreadable-array-destructuring": "warn",
  "unicorn/no-unreadable-iife": "warn",
  "unicorn/no-unsafe-regex": "error",
  "unicorn/no-unused-properties": "warn",
  "unicorn/no-useless-fallback-in-spread": "warn",
  "unicorn/no-useless-length-check": "error",
  "unicorn/no-useless-promise-resolve-reject": "warn",
  "unicorn/no-useless-spread": "error",
  "unicorn/no-useless-switch-case": "warn",
  "unicorn/no-useless-undefined": "error",
  "unicorn/no-zero-fractions": "error",
  "unicorn/number-literal-case": "off",
  "unicorn/numeric-separators-style": "warn",
  "unicorn/prefer-add-event-listener": "error",
  "unicorn/prefer-array-find": "error",
  "unicorn/prefer-array-flat": "warn",
  "unicorn/prefer-array-flat-map": "error",
  "unicorn/prefer-array-index-of": "warn",
  "unicorn/prefer-array-some": "warn",
  "unicorn/prefer-at": "off",
  "unicorn/prefer-code-point": "warn",
  "unicorn/prefer-date-now": "warn",
  "unicorn/prefer-default-parameters": "warn",
  "unicorn/prefer-dom-node-append": "error",
  "unicorn/prefer-dom-node-dataset": "error",
  "unicorn/prefer-dom-node-remove": "error",
  "unicorn/prefer-dom-node-text-content": "error",
  "unicorn/prefer-export-from": "warn",
  "unicorn/prefer-includes": "off",
  "unicorn/prefer-json-parse-buffer": "warn",
  "unicorn/prefer-keyboard-event-key": "error",
  "unicorn/prefer-math-trunc": "warn",
  "unicorn/prefer-modern-dom-apis": "error",
  "unicorn/prefer-modern-math-apis": "warn",
  "unicorn/prefer-module": "off",
  "unicorn/prefer-native-coercion-functions": "error",
  "unicorn/prefer-negative-index": "error",
  "unicorn/prefer-node-protocol": "off",
  "unicorn/prefer-number-properties": [
    "warn",
    {
      "checkInfinity": false,
    },
  ],
  "unicorn/prefer-object-from-entries": "error",
  "unicorn/prefer-optional-catch-binding": "error",
  "unicorn/prefer-prototype-methods": "warn",
  "unicorn/prefer-query-selector": "error",
  "unicorn/prefer-reflect-apply": "error",
  "unicorn/prefer-regexp-test": "error",
  "unicorn/prefer-set-has": "error",
  "unicorn/prefer-spread": "error",
  "unicorn/prefer-string-replace-all": "off",
  "unicorn/prefer-string-slice": "error",
  "unicorn/prefer-string-starts-ends-with": "off",
  "unicorn/prefer-string-trim-start-end": "error",
  "unicorn/prefer-switch": [
    "error",
    {
      "emptyDefaultCase": "no-default-comment",
    },
  ],
  "unicorn/prefer-ternary": "off",
  "unicorn/prefer-top-level-await": "off",
  "unicorn/prefer-type-error": "error",
  "unicorn/prevent-abbreviations": "off",
  "unicorn/relative-url-style": "warn",
  "unicorn/require-array-join-separator": "warn",
  "unicorn/require-number-to-fixed-digits-argument": "warn",
  "unicorn/require-post-message-target-origin": "error",
  "unicorn/string-content": "off",
  "unicorn/template-indent": "warn",
  "unicorn/text-encoding-identifier-case": "off",
  "unicorn/throw-new-error": "error",
}
`;

exports[`with react 1`] = `
{
  "unicorn/better-regex": "error",
  "unicorn/catch-error-name": "error",
  "unicorn/consistent-destructuring": "error",
  "unicorn/consistent-function-scoping": "error",
  "unicorn/custom-error-definition": "warn",
  "unicorn/empty-brace-spaces": "off",
  "unicorn/error-message": "error",
  "unicorn/escape-case": "error",
  "unicorn/expiring-todo-comments": "off",
  "unicorn/explicit-length-check": "error",
  "unicorn/filename-case": "off",
  "unicorn/import-index": "error",
  "unicorn/import-style": "off",
  "unicorn/new-for-builtins": "error",
  "unicorn/no-abusive-eslint-disable": "error",
  "unicorn/no-array-callback-reference": "off",
  "unicorn/no-array-for-each": "off",
  "unicorn/no-array-method-this-argument": "warn",
  "unicorn/no-array-push-push": "warn",
  "unicorn/no-array-reduce": "off",
  "unicorn/no-await-expression-member": "error",
  "unicorn/no-console-spaces": "error",
  "unicorn/no-document-cookie": "warn",
  "unicorn/no-empty-file": "off",
  "unicorn/no-for-loop": "warn",
  "unicorn/no-hex-escape": "error",
  "unicorn/no-instanceof-array": "error",
  "unicorn/no-invalid-remove-event-listener": "error",
  "unicorn/no-keyword-prefix": "off",
  "unicorn/no-lonely-if": "warn",
  "unicorn/no-nested-ternary": "off",
  "unicorn/no-new-array": "error",
  "unicorn/no-new-buffer": "error",
  "unicorn/no-null": "off",
  "unicorn/no-object-as-default-parameter": "warn",
  "unicorn/no-process-exit": "error",
  "unicorn/no-static-only-class": "error",
  "unicorn/no-thenable": "warn",
  "unicorn/no-this-assignment": "warn",
  "unicorn/no-unreadable-array-destructuring": "warn",
  "unicorn/no-unreadable-iife": "warn",
  "unicorn/no-unsafe-regex": "error",
  "unicorn/no-unused-properties": "warn",
  "unicorn/no-useless-fallback-in-spread": "warn",
  "unicorn/no-useless-length-check": "error",
  "unicorn/no-useless-promise-resolve-reject": "warn",
  "unicorn/no-useless-spread": "error",
  "unicorn/no-useless-switch-case": "warn",
  "unicorn/no-useless-undefined": "error",
  "unicorn/no-zero-fractions": "error",
  "unicorn/number-literal-case": "off",
  "unicorn/numeric-separators-style": "warn",
  "unicorn/prefer-add-event-listener": "error",
  "unicorn/prefer-array-find": "error",
  "unicorn/prefer-array-flat": "warn",
  "unicorn/prefer-array-flat-map": "error",
  "unicorn/prefer-array-index-of": "warn",
  "unicorn/prefer-array-some": "warn",
  "unicorn/prefer-at": "off",
  "unicorn/prefer-code-point": "warn",
  "unicorn/prefer-date-now": "warn",
  "unicorn/prefer-default-parameters": "warn",
  "unicorn/prefer-dom-node-append": "error",
  "unicorn/prefer-dom-node-dataset": "error",
  "unicorn/prefer-dom-node-remove": "error",
  "unicorn/prefer-dom-node-text-content": "error",
  "unicorn/prefer-export-from": "warn",
  "unicorn/prefer-includes": "warn",
  "unicorn/prefer-json-parse-buffer": "warn",
  "unicorn/prefer-keyboard-event-key": "error",
  "unicorn/prefer-math-trunc": "warn",
  "unicorn/prefer-modern-dom-apis": "error",
  "unicorn/prefer-modern-math-apis": "warn",
  "unicorn/prefer-module": "off",
  "unicorn/prefer-native-coercion-functions": "error",
  "unicorn/prefer-negative-index": "error",
  "unicorn/prefer-node-protocol": "off",
  "unicorn/prefer-number-properties": [
    "warn",
    {
      "checkInfinity": false,
    },
  ],
  "unicorn/prefer-object-from-entries": "error",
  "unicorn/prefer-optional-catch-binding": "error",
  "unicorn/prefer-prototype-methods": "warn",
  "unicorn/prefer-query-selector": "error",
  "unicorn/prefer-reflect-apply": "error",
  "unicorn/prefer-regexp-test": "error",
  "unicorn/prefer-set-has": "error",
  "unicorn/prefer-spread": "error",
  "unicorn/prefer-string-replace-all": "error",
  "unicorn/prefer-string-slice": "error",
  "unicorn/prefer-string-starts-ends-with": "error",
  "unicorn/prefer-string-trim-start-end": "error",
  "unicorn/prefer-switch": [
    "error",
    {
      "emptyDefaultCase": "no-default-comment",
    },
  ],
  "unicorn/prefer-ternary": "off",
  "unicorn/prefer-top-level-await": "off",
  "unicorn/prefer-type-error": "error",
  "unicorn/prevent-abbreviations": "off",
  "unicorn/relative-url-style": "warn",
  "unicorn/require-array-join-separator": "warn",
  "unicorn/require-number-to-fixed-digits-argument": "warn",
  "unicorn/require-post-message-target-origin": "error",
  "unicorn/string-content": "off",
  "unicorn/template-indent": "warn",
  "unicorn/text-encoding-identifier-case": "warn",
  "unicorn/throw-new-error": "error",
}
`;

exports[`with typescript 1`] = `
{
  "unicorn/better-regex": "error",
  "unicorn/catch-error-name": "error",
  "unicorn/consistent-destructuring": "error",
  "unicorn/consistent-function-scoping": "error",
  "unicorn/custom-error-definition": "warn",
  "unicorn/empty-brace-spaces": "off",
  "unicorn/error-message": "error",
  "unicorn/escape-case": "error",
  "unicorn/expiring-todo-comments": "off",
  "unicorn/explicit-length-check": "error",
  "unicorn/filename-case": "off",
  "unicorn/import-index": "error",
  "unicorn/import-style": "off",
  "unicorn/new-for-builtins": "error",
  "unicorn/no-abusive-eslint-disable": "error",
  "unicorn/no-array-callback-reference": "off",
  "unicorn/no-array-for-each": "off",
  "unicorn/no-array-method-this-argument": "warn",
  "unicorn/no-array-push-push": "warn",
  "unicorn/no-array-reduce": "off",
  "unicorn/no-await-expression-member": "error",
  "unicorn/no-console-spaces": "error",
  "unicorn/no-document-cookie": "warn",
  "unicorn/no-empty-file": "off",
  "unicorn/no-for-loop": "off",
  "unicorn/no-hex-escape": "error",
  "unicorn/no-instanceof-array": "error",
  "unicorn/no-invalid-remove-event-listener": "error",
  "unicorn/no-keyword-prefix": "warn",
  "unicorn/no-lonely-if": "warn",
  "unicorn/no-nested-ternary": "off",
  "unicorn/no-new-array": "error",
  "unicorn/no-new-buffer": "error",
  "unicorn/no-null": "off",
  "unicorn/no-object-as-default-parameter": "warn",
  "unicorn/no-process-exit": "error",
  "unicorn/no-static-only-class": "error",
  "unicorn/no-thenable": "warn",
  "unicorn/no-this-assignment": "warn",
  "unicorn/no-unreadable-array-destructuring": "warn",
  "unicorn/no-unreadable-iife": "warn",
  "unicorn/no-unsafe-regex": "error",
  "unicorn/no-unused-properties": "warn",
  "unicorn/no-useless-fallback-in-spread": "warn",
  "unicorn/no-useless-length-check": "error",
  "unicorn/no-useless-promise-resolve-reject": "warn",
  "unicorn/no-useless-spread": "error",
  "unicorn/no-useless-switch-case": "warn",
  "unicorn/no-useless-undefined": "error",
  "unicorn/no-zero-fractions": "error",
  "unicorn/number-literal-case": "off",
  "unicorn/numeric-separators-style": "warn",
  "unicorn/prefer-add-event-listener": "error",
  "unicorn/prefer-array-find": "error",
  "unicorn/prefer-array-flat": "warn",
  "unicorn/prefer-array-flat-map": "error",
  "unicorn/prefer-array-index-of": "warn",
  "unicorn/prefer-array-some": "warn",
  "unicorn/prefer-at": "off",
  "unicorn/prefer-code-point": "warn",
  "unicorn/prefer-date-now": "warn",
  "unicorn/prefer-default-parameters": "warn",
  "unicorn/prefer-dom-node-append": "error",
  "unicorn/prefer-dom-node-dataset": "error",
  "unicorn/prefer-dom-node-remove": "error",
  "unicorn/prefer-dom-node-text-content": "error",
  "unicorn/prefer-export-from": "warn",
  "unicorn/prefer-includes": "off",
  "unicorn/prefer-json-parse-buffer": "warn",
  "unicorn/prefer-keyboard-event-key": "error",
  "unicorn/prefer-math-trunc": "warn",
  "unicorn/prefer-modern-dom-apis": "error",
  "unicorn/prefer-modern-math-apis": "warn",
  "unicorn/prefer-module": "off",
  "unicorn/prefer-native-coercion-functions": "error",
  "unicorn/prefer-negative-index": "error",
  "unicorn/prefer-node-protocol": "off",
  "unicorn/prefer-number-properties": [
    "warn",
    {
      "checkInfinity": false,
    },
  ],
  "unicorn/prefer-object-from-entries": "error",
  "unicorn/prefer-optional-catch-binding": "error",
  "unicorn/prefer-prototype-methods": "warn",
  "unicorn/prefer-query-selector": "error",
  "unicorn/prefer-reflect-apply": "error",
  "unicorn/prefer-regexp-test": "error",
  "unicorn/prefer-set-has": "error",
  "unicorn/prefer-spread": "error",
  "unicorn/prefer-string-replace-all": "off",
  "unicorn/prefer-string-slice": "error",
  "unicorn/prefer-string-starts-ends-with": "off",
  "unicorn/prefer-string-trim-start-end": "error",
  "unicorn/prefer-switch": [
    "error",
    {
      "emptyDefaultCase": "no-default-comment",
    },
  ],
  "unicorn/prefer-ternary": "off",
  "unicorn/prefer-top-level-await": "off",
  "unicorn/prefer-type-error": "error",
  "unicorn/prevent-abbreviations": "off",
  "unicorn/relative-url-style": "warn",
  "unicorn/require-array-join-separator": "warn",
  "unicorn/require-number-to-fixed-digits-argument": "warn",
  "unicorn/require-post-message-target-origin": "error",
  "unicorn/string-content": "off",
  "unicorn/template-indent": "warn",
  "unicorn/text-encoding-identifier-case": "off",
  "unicorn/throw-new-error": "error",
}
`;
